--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -448,6 +448,7 @@ Kyrgyzstan ,/n./@吉尔吉斯斯坦;
 laboratory ,/n./@實驗室;
 lavishness ,/n./@大方;,/n./@浪費;,/n./@豐富;
 leadership ,/n./@領導;
+legitimacy ,/n./@合法性;,/n./@合理性;,/n./@正統性;,/n./@正當性;
 legitimate ,/adj./@合法的;,/adj./@合理的;,/adj./@正統的;,/adj./@婚生的;
 lengendary ,/adj./@传奇般的;
 leucoderma ,/redirected./@target="vitiligo";
