--- a/Files/lang/ch/chinese13.csv
+++ b/Files/lang/ch/chinese13.csv
@@ -78,6 +78,7 @@ intergalactic ,/adj./@星系際的;,/adj./@銀河際的;
 international ,/adj./@国际的;
 interpolation ,/n./@插入;,/n./@篡改;,/n./@填寫;,/n./@插话;,/n./@插補;
 interrogation ,/n./@讯问;,/n./@审问;
+intrinsically ,/adv./@本質上地;,/adv./@內在地;,/adv./@固有地;,/adv./@自然地;,/adv./@就本身而言地;
 introspection ,/n./@自省;,/n./@内省;
 intuitiveness ,/n./@直觀性;
 inventiveness ,/n./@創造力;
