--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -489,7 +489,7 @@ familiar ,/adj./@熟悉的;,/adj./@親近的;,/adj./@相似的;
 farewell ,/v./@告别;
 farthing ,/n./@一点;,/n./@法新@(四分之一便士);
 favorite ,/adj./@最爱的;
-feasible ,/adj./@可行的;
+feasible ,/adj./@可行的;,/adj./@可實行的;,/adj./@可能的;
 February ,/n./@二月;
 feedback ,/n./@反饋;
 feminine ,/adj./@女性的;,/adj./@陰性的;,/adj./@婦女的;
