--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -602,7 +602,7 @@ intervene ,/v./@介入;,/v./@干涉;,/v./@調停;
 interview ,/v./@面试;,/v./@采访;
 intestine ,/n./@肠;
 intricate ,/adj./@复杂的;
-intrinsic ,/adj./@本质的;,/adj./@固有的;,/adj./@本身的;
+intrinsic ,/adj./@本质的;,/adj./@固有的;,/adj./@本身的;,/adj./@內在的;
 introduce ,/v./@介紹;,/v./@引進;,/v./@采用;
 intuition ,/n./@直觉;
 intuitive ,/adj./@直觉的;
@@ -920,6 +920,7 @@ sarcastic ,/adj./@挖苦的;,/adj./@讽刺的;
 satirical ,/adj./@諷刺的;
 satisfied ,/adj./@感到滿意的;
 scapegoat ,/n./@替罪羊;,/n./@替罪者;
+sceptical ,/redirected./@target="skeptical";
 schematic ,/adj./@图解的;,/adj./@概要的;,/adj./@示意的;,/adj./@圖示的;,/adj./@概略的;
 scientist ,/n./@科学家;
 scoundrel ,/n./@無賴;,/n./@壞蛋;,/n./@惡棍;,/n./@流氓;
@@ -957,7 +958,7 @@ simulator ,/n./@模拟器;
 sincerely ,/adj./@真诚地;
 sinistral ,/adj./@左的;,/adj./@用左手的;,/adj./@左旋的;
 situation ,/n./@情况;
-skeptical ,/adj./@懷疑的;,/adj./@懷疑論的;
+skeptical ,/adj./@懷疑的;,/adj./@懷疑論的;,/adj./@不可知論的;,/adj./@表示懷疑的;,/adj./@持懷疑態度的;
 slaughter ,/n./@屠殺;
 socialite ,/n./@社會名流;,/n./@社交界名流;
 solicitor ,/n./@律師;
