--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -803,7 +803,7 @@ north ,/n./@北方;
 notch ,/n./@劃痕;,/n./@凹口;,/n./@等級;,/n./@峽谷;,/v./@贏得;
 novel ,/adj./@新穎的;
 nowel ,/n./@阻力;
-nudge ,/v./@推動;
+nudge ,/v./@推動;,/v./@輕推;,/v./@推進;,/n./@輕推;
 nurse ,/n./@護士;,/v./@看護;,/v./@護理;
 nymph ,/n./@女神;,/n./@仙女;,/n./@美麗的少女;,/n./@蛹;
 oasis ,/n./@綠洲;
