--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -963,6 +963,7 @@ neural ,/adj./@神經的;
 neuro- ,/pref./@神經的;
 neuron ,/n./@神經元;
 neuter ,/adj./@中性的;,/adj./@無性的;,/n./@中性詞;,/n./@無性者;,/n./@無性動物;
+nibble ,/v./@輕咬;,/v./@細咬;,/v./@侵蝕;,/n./@輕咬;,/n./一@小口;
 nicety ,/n./@精密;
 nickel ,/n./@鎳幣;
 nimble ,/adj./@敏捷的;
