--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -183,7 +183,7 @@ congestion ,/n./@阻塞;
 congregate ,/v./@聚集;
 congruence ,/n./@一致;,/n./@適合;,/n./@全等;
 coniferous ,/adj./@结球果的;,/adj./@针叶树的;
-conjecture ,/n./@推测;
+conjecture ,/n./@推测;,/v./@推測;,/v./@猜測;,/n./@猜測;
 connection ,/n./@连接;,/n./@联系;
 conscience ,/n./@良心;
 consensual ,/adj./@两厢情愿的;,/adj./@交感的;,/adj./@在雙方同意下成立的;,/adj./@一致同意的;
@@ -332,6 +332,7 @@ figurative ,/adj./@比喻的;,/adj./@象徵性的;,/adj./@具象的;
 filibuster ,/n./@海盜;,/n./@阻撓;,/v./@阻礙;,/v./@掠奪;
 flabbiness ,/n./@軟弱;
 flintstone ,/n./@燧石;,/n./@打火石;
+flyswatter ,/redirected./@target="fly swatter";
 forfeiture ,/n./@沒收財產;
 formidable ,/adj./@強大的;,/adj./@令人敬畏的;
 forthright ,/adj./@直率的;,/adj./@直截了當的;,/adj./@坦率的;,/adv./@直率地;,/adv./@徑直地;
@@ -343,6 +344,7 @@ friendship ,/n./@友谊;
 frustrated ,/adj./@受挫的;,/adj./@沮丧的;
 functional ,/adj./@实用的;,/adj./@功能的;
 futuristic ,/adj./@未來派的;,/adj./@超前新奇的;,/adj./@极其新潮的;
+gargantuan ,/adj./@巨大的;,/adj./@龐大的;
 generation ,/n./@一代;
 geneticist ,/n./@遺傳學家;
 girlfriend ,/n./@女朋友;
@@ -616,6 +618,7 @@ receptacle ,/n./@儲藏所;,/n./@容器;
 recreation ,/n./@娱乐;
 recuperate ,/vt./@恢復;,/vt./@挽回;
 recurrence ,/n./@復發;
+redemption ,/n./@贖回;,/n./@償還;,/n./@救贖;,/n./@贖救;,/n./@履行;,/n./@兌現;,/n./@贖罪;,/n./@挽救;
 referendum ,/n./@公投;,/n./@全民投票;
 reflection ,/n./@反应;,/n./@反射;
 reflective ,/adj./@反射的;,/adj./@反照的;,/adj./@反映的;,/adj./@思辨的;,/adj./@沉思的;
