--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -233,6 +233,7 @@ indivisible ,/adj./@不可分割的;
 infantryman ,/n./@步兵;
 inferiority ,/n./@劣勢;
 infertility ,/n./@無生育能力;,/n./@貧瘠;,/n./@不肥沃;
+infestation ,/n./@大批出沒;,/n./@侵擾;,/n./@大量滋生;,/n./@大規模侵襲;,/n./@密集滋生;
 information ,/n./@信息;
 innumerable ,/adj./@无数的;
 inquisitive ,/adj./@好奇的;,/adj./@好問的;,/adj./@愛打聽的;
@@ -330,6 +331,7 @@ possibility ,/n./@可能性;
 postulation ,/n./@假定;,/n./@假設;
 precipitant ,/n./@促發者;,/n./@沉澱劑;
 precipitate ,/v./@促成;,/vt./@促使;,/vi./@沉澱;
+precipitous ,/adj./@陡峭的;,/adj./@急躁的;,/adj./@險峻的;,/adj./@倉促的;,/adj./@倉卒的;,/adj./@急促的;,/adj./@猛衝的;,/adj./@魯莽的;,/adj./@驟然的;
 predictable ,/adj./@可预测的;
 predominant ,/adj./@主要的;,/adj./@卓越的;,/adj./@支配的;,/adj./@有影響的;,/adj./@有力的;
 prehistoric ,/adj./@史前的;
@@ -341,6 +343,7 @@ prerogative ,/adj./@有特權的;
 prestigious ,/adj./@有名望的;,/adj./@有声望的;
 presumption ,/n./@假定;,/n./@推定;,/n./@冒昧;
 pretentious ,/adj./@虛偽的;,/adj./@做作的;,/adj./@自以為是的;,/adj./@自命不凡的;,/adj./@炫耀的;,/adj./@矯飾的;
+procreation ,/n./@生育;,/n./@生殖;,/n./@生產;,/n./@繁殖;
 procurement ,/n./@取得;
 proficiency ,/n./@熟练;,/n./@精通;
 progression ,/n./@前進;,/n./@連續;
