--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -96,7 +96,7 @@ both ,/adv./@兩者都;,/conj./@既;,/adj./@兩個的;
 bowl ,/n./@碗;
 brew ,/v./@釀造;,/n./@釀造;
 brig ,/n./@禁閉室;,/n./@横帆双桅船;
-brim ,/n./@邊緣;,/n./@邊;
+brim ,/n./@邊緣;,/n./@邊;,/vt./@注滿;,/vi./@充滿;,/vi./@溢滿;
 brow ,/n./@眉毛;,/n./@額;,/n./@山脊;,/n./@额头;
 buck ,/n./@錢;,/n./@雄鹿;
 bulb ,/n./@球形物;,/n./@燈泡;
@@ -273,6 +273,7 @@ emit ,/v./@发出;,/v./@发射;
 envy ,/v./@嫉妒;
 epic ,/n./@史詩;
 ergo ,/adv./@因此;
+etch ,/vt./@蝕刻;,/vt./@蝕鏤;
 even ,/adv./@甚至;,/adj./@相等的;
 ever ,/adv./@永遠;,/adv./@曾經;,/adv./@究竟;
 evil ,/n./@邪惡;,/adj./@邪惡的;
