--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -973,6 +973,7 @@ punctual ,/adj./@准时的;
 puncture ,/v./@刺穿;,/vt./@刺破;
 punitive ,/adj./@惩罚性的;,/adj./@苛刻的;
 purchase ,/v./@购买;
+pursuant ,/adj./@依據的;,/adj./@根據的;,/adj./@根隨的;,/adj./@隨後的;,/adv./@根據;,/adv./@依照;
 Qabalism ,/redirected./@target="Kabbalism";
 Qabalist ,/redirected./@target="Kabbalist";
 quackery ,/n./@庸医的医术;,/n./@欺骗行为;
@@ -1042,6 +1043,7 @@ sabotage ,/n./@破坏;,/n./@妨碍;
 saboteur ,/n./@蓄意破壞者;
 sadistic ,/adj./@虐待狂的;,/adj./@施虐狂的;,/adj./@殘酷成性的;
 sanction ,/n./@批准;,/n./@认可;
+sanitary ,/adj./@公共衛生的;,/adj./@衛生的;,/adj./@衛生上的;,/adj./@清潔的;
 Sanskrit ,/n./@梵文;,/n./@梵語;,/adj./@梵文的;,/adj./@梵語的;
 Saturday ,/n./@星期六;
 scaffold ,/n./@脚手架;,/n./@绞刑台;
