--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -178,6 +178,7 @@ celebrate ,/v./@庆祝;
 celebrity ,/n./@名人;
 celestial ,/adj./@天国的;,/adj./@天空的;,/adj./@天体的;,/adj./@精妙的;
 cellulose ,/n./@纖維素;
+Centaurus ,/n./@半人馬座;,/n./@半人馬星座;
 centurion ,/n./@百人隊隊長;
 certainly ,/adv./@当然;
 certainty ,/n./@必然;
@@ -789,6 +790,7 @@ pineapple ,/n./@菠萝;
 plainsman ,/n./@平原居民;
 plaintiff ,/n./@原告;
 planetary ,/adj./@行星的;
+plasmatic ,/adj./@等離子的;,/adj./@血漿的;,/adj./@原生質的;
 platitude ,/n./@单调;
 plausible ,/adj./@似有道理的;
 plentiful ,/adj./@丰富的;,/adj./@充足的;
