--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -332,6 +332,7 @@ figurative
 filibuster
 flabbiness
 flintstone
+flyswatter
 forfeiture
 formidable
 forthright
@@ -343,6 +344,7 @@ friendship
 frustrated
 functional
 futuristic
+gargantuan
 generation
 geneticist
 girlfriend
@@ -616,6 +618,7 @@ receptacle
 recreation
 recuperate
 recurrence
+redemption
 referendum
 reflection
 reflective
