--- a/Files/lang/en/english11.csv
+++ b/Files/lang/en/english11.csv
@@ -233,6 +233,7 @@ indivisible
 infantryman
 inferiority
 infertility
+infestation
 information
 innumerable
 inquisitive
@@ -330,6 +331,7 @@ possibility
 postulation
 precipitant
 precipitate
+precipitous
 predictable
 predominant
 prehistoric
@@ -341,6 +343,7 @@ prerogative
 prestigious
 presumption
 pretentious
+procreation
 procurement
 proficiency
 progression
