--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -973,6 +973,7 @@ punctual
 puncture
 punitive
 purchase
+pursuant
 Qabalism
 Qabalist
 quackery
@@ -1042,6 +1043,7 @@ sabotage
 saboteur
 sadistic
 sanction
+sanitary
 Sanskrit
 Saturday
 scaffold
