--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -178,6 +178,7 @@ celebrate
 celebrity
 celestial
 cellulose
+Centaurus
 centurion
 certainly
 certainty
@@ -789,6 +790,7 @@ pineapple
 plainsman
 plaintiff
 planetary
+plasmatic
 platitude
 plausible
 plentiful
