--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -770,7 +770,7 @@ moron ,/n./@傻子;,/n./@笨蛋;
 morph ,/n.v./@詞態;,/v./@改變;
 motel ,/n./@汽車旅館;
 motif ,/n./@主題;,/n./@基調;,/n./@主旨;,/n./@基本圖案;
-motto ,/n./@座右銘;,/n./@格言;
+motto ,/n./@座右銘;,/n./@格言;,/n./@訓言;
 mould ,/n./@霉菌;,/n./@模具;,/n./@型;,/v./@發霉;,/v./@澆鑄;
 mound ,/n./@堆;,/v./@堆起;
 mourn ,/v./@哀嚎;
