--- a/Files/lang/phrases/2 word phrase.csv
+++ b/Files/lang/phrases/2 word phrase.csv
@@ -148,7 +148,7 @@
 ,Caspian,Sea,裡海;
 ,South,Caucasus,南高加索;
 ,black,magic,妖術;
-,in,memoriam,紀念;
+,in,memoriam,紀念,悼念,追思,緬懷,追念,訃告;
 ,Late,Antiquity,古典時代晚期;
 ,hypochlorous,acid,次氯酸;
 ,corpus,striatum,紋狀體;
@@ -157,3 +157,5 @@
 ,the,Pentagon,五角大廈;
 ,Canadian,content,加拿大內容;
 ,fly,swatter,蒼蠅拍;
+,bona,fide,真實的,真誠的,有誠意的,真正的;
+,bon,mot,警句,妙語;
