--- a/Files/lang/ch/chinese14.csv
+++ b/Files/lang/ch/chinese14.csv
@@ -3,6 +3,7 @@ archaeological ,/adj./@考古学的;
 astrophysicist ,/n./@天體物理學家;
 authentication ,/n./@證明;,/n./@鑑定;,/n./@證實;
 characteristic ,/n./@特徵;,/n./@特性;
+cinematography ,/n./@電影攝製藝術;,/n./@電影攝製;
 circumvolution ,/n./@盤繞;,/n./@旋轉;
 classification ,/n./@分类;
 claustrophobia ,/n./@幽閉恐懼症;,/n./@幽閉恐怖症;
