--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -821,7 +821,7 @@ real ,/adj./@眞實的;
 reap ,/v./@收割;
 rear ,/adj./@后的;,/v./@培養;,/v./@栽種;
 reef ,/n./@礁石;
-reel ,/v./@卷;,/v./@眩暈;,/v./@蹒跚;
+reel ,/v./@卷;,/v./@眩暈;,/v./@蹒跚;,/n./@捲軸;,/n./@捲筒;,/n./@繞線輪;
 rely ,/v./@依賴;,/v./@依靠;
 rent ,/v./@租;
 rest ,/v./@休息;,/n./@休息;
@@ -995,7 +995,7 @@ tale ,/n./@童話;
 talk ,/v./@交談;
 tall ,/adj./@髙@的;
 tank ,/n./@坦克;,/n./@水箱;
-tape ,/n./@膠帶;,/n./@磁帶;
+tape ,/n./@膠帶;,/n./@磁帶;,/n./@帶子;,/n./@線帶;,/n./@膠布;,/n./@紙帶;
 tarp ,/n./@柏油帆布;
 tart ,/adj./@刻薄的;,/adj./@苛刻的;
 task ,/n./@工作;
