--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -1388,7 +1388,7 @@ soviet ,/n./@蘇維埃;
 sparse ,/adj./@稀疏的;,/adj./@稀少的;
 specie ,/v./@硬幣;
 speech ,/n./@演說;,/n./@語音;,/n./@講話;
-sphere ,/n./@球體;,/n./@範圍;,/n./@領域;,/v./@包圍;
+sphere ,/n./@球體;,/n./@範圍;,/n./@領域;,/v./@包圍;,/n./@球面;
 spider ,/n./@蜘蛛;
 spinal ,/adj./@脊椎的;,/adj./@脊髓的;,/adj./@脊柱的;,/adj./@脊骨的;,/adj./@尖刺的;
 spirit ,/n./@精神;
