--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -1086,6 +1086,7 @@ shortage ,/n./@不足;,/n./@缺少;
 shortcut ,/n./@捷徑;
 shoulder ,/n./@肩;
 showcase ,/n./@陳列櫃;,/n./@展示场所;,/vt./@展示;,/vt./@展現;,/vt./@陳列;,/vt./@亮相;
+showreel ,/n./@案例演示影像;
 Sicilian ,/adj./@西西里的;,/n./@西西里人;,/n./@西西里方言;,/adj./@西西里人的;,/adj./@西西里方言的;
 simplify ,/v./@简化;
 simulate ,/v./@模仿;
