--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -264,6 +264,7 @@ crossfire ,/n./@交叉火力;,/n./@激烈交锋;
 crossover ,/n./@交叉;,/n./@交叉點;,/n./@穿越;
 crossword ,/n./@纵横字谜;
 cruciform ,/adj./@十字形的;
+cryogenic ,/adj./@低溫學的;,/adj./@深凍冷藏的;
 culminate ,/vi./@告终;,/vi./@達到高潮;,/vi./@達到頂點;
 cultivate ,/v./@培养;
 cuneiform ,/n./@楔形文字;,/adj./@楔形文字的;
@@ -1080,6 +1081,7 @@ vengeance ,/n./@报复;,/n./@复仇;
 ventricle ,/n./@室;,/n./@心室;,/n./@腦室;
 versatile ,/adj./@多功能的;,/adj./@多才多藝的;,/adj./@多用途的;,/adj./@多種用途的;,/adj./@隨機應變的;,/adj./@多方面適用的;,/adj./@萬用的;
 vibration ,/n./@振動;,/n./@顫動;,/n./@震動;
+videotape ,/n./@錄像帶;,/n./@錄影帶;
 viewpoint ,/n./@观点;
 vigilance ,/n./@警戒;
 vindicate ,/v./@辯護;
