--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -264,6 +264,7 @@ crossfire
 crossover
 crossword
 cruciform
+cryogenic
 culminate
 cultivate
 cuneiform
@@ -1080,6 +1081,7 @@ vengeance
 ventricle
 versatile
 vibration
+videotape
 viewpoint
 vigilance
 vindicate
