--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -18,7 +18,7 @@ acquire ,/v./@習得;
 acrobat ,/n./@雜技演員;,/n./@特技演員;
 acronym ,/n./@首字母縮略詞;
 actress ,/n./@女演員;
-adamant ,/adj./@固執的;,/adj./@堅定的;
+adamant ,/adj./@固執的;,/adj./@堅定的;,/adj./@堅決的;
 address ,/n./@地址;,/n./@演講;,/n./@致辭;,/v./@從事;
 adjourn ,/v./@延期;,/vt./@中止;,/vt./@休會;,/vt./@休庭;
 adjunct ,/n./@附屬物;
