--- a/Files/lang/phrases/2 word phrase.csv
+++ b/Files/lang/phrases/2 word phrase.csv
@@ -160,3 +160,5 @@
 ,bona,fide,真實的,真誠的,有誠意的,真正的;
 ,bon,mot,警句,妙語;
 ,demo,reel,/redirected./@target="showreel";
+,sizzle,reel,/redirected./@target="showreel";
+,work,reel,/redirected./@target="showreel";
