--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -262,6 +262,7 @@ disappoint ,/v./使@失望;
 disapprove ,/v./@不赞成;,/v./@不同意;
 discipline ,/n./@纪律;,/n./@训练;,/n./@惩罚;
 disclosure ,/n./@披露;,/n./@揭發;
+disconnect ,/vt./@分開;,/vt./@分離;,/vt./@斷開;,/vt./@切斷;
 discordant ,/adj./@不一致的;,/adj./@不和諧的;,/adj./@刺耳的;
 discourage ,/v./@使沮丧;
 discretion ,/n./@决断能力;,/n./@处理权;,/n./@酌情决定权;,/n./@谨慎;,/n./@慎重;
@@ -456,7 +457,7 @@ lengendary ,/adj./@传奇般的;
 leucoderma ,/redirected./@target="vitiligo";
 leukoderma ,/redirected./@target="vitiligo";
 lieutenant ,/n./@中尉;,/n./@陆军中尉;,/n./@海军上尉;
-likelihood ,/n./@可能;,/n./@相似性;
+likelihood ,/n./@可能;,/n./@可能性;
 linguistic ,/adj./@語言的;,/adj./@語言學的;
 locomotive ,/n./@火车头;,/n./@機車;,/adj./@運動的;,/adj./@有運動能力的;
 loneliness ,/n./@寂寞;
