--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -79,6 +79,7 @@ deliberation ,/n./@慎重;,/n./@故意;
 demographics ,/n./@人口统计资料;
 denomination ,/n./@名称;,/n./@教派;,/n./@面额;
 destigmatize ,/vt./@去污名化;
+detoxication ,/redirected./@target="detoxification";
 disadvantage ,/n./@不利;
 disagreement ,/n./@争执;,/n./@不符;
 disconsolate ,/adj./@憂鬱的;,/adj./@鬱鬱不樂的;
