--- a/Files/lang/ch/chinese13.csv
+++ b/Files/lang/ch/chinese13.csv
@@ -57,6 +57,7 @@ environmental ,/adj./@環境的;,/adj./@周圍的;
 establishment ,/n./@确立;,/n./@制定;
 extermination ,/n./@消灭;,/n./@灭绝;
 extraordinary ,/adj./@特别的;,/adj./@非凡的;
+extrapolation ,/n./@推斷;,/n./@外推;,/n./@外推法;
 globalization ,/n./@全球化;
 hallucination ,/n./@幻覺;,/n./@妄想;,/n./@錯覺;
 heterogeneous ,/adj./@多相的;,/adj./@異種的;,/adj./@不均勻的;,/adj./@由不同成分形成的;
