--- a/Files/lang/ch/chinese14.csv
+++ b/Files/lang/ch/chinese14.csv
@@ -9,6 +9,7 @@ classification ,/n./@分类;
 claustrophobia ,/n./@幽閉恐懼症;,/n./@幽閉恐怖症;
 congratulation ,/n./@祝贺;
 craniocerebral ,/adj./@顱腦的;
+detoxification ,/n./@解毒;,/n./@戒毒;,/n./@解毒作用;,/n./@去毒;
 disappointedly ,/adv./@失望的;
 discrimination ,/n./@歧視;,/n./@辨別;,/n./@區別;
 dysproteinosis ,/n./@蛋白質缺乏症;
