--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -110,7 +110,7 @@ bury ,/v./@埋葬;
 bush ,/n./@灌木叢;
 bust ,/n./@破產;
 busy ,/adj./@忙碌的;
-butt ,/n./@根端;,/v./@頂撞;
+butt ,/n./@根端;,/v./@頂撞;,/n./@對象;,/n./@靶子;,/n./@槍托;,/n./@菸蒂;,/n./@屁股;,/n./@笑柄;
 cafe ,/n./@咖啡館;
 cake ,/n./@蛋糕;
 calf ,/n./@牛犊;,/n./@幼兽;,/n./@小牛皮;,/n./@腿肚子;,/n./@腓;,/n./@浮冰;
