--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -892,7 +892,7 @@ memoir ,/n./@回憶録;,/n./@自傳;
 memory ,/n./@記憶;,/n./@記憶力;,/n./@紀念;,/n./@存儲;
 menace ,/v./@威脅;,/v./@恐嚇;,/n./@威脅;,/n./@恐嚇;
 meninx ,/n./@腦膜;
-mental ,/adj./@精神的;,/adj./@心理的;,/adj./@智力的;,/adj./@內心的;
+mental ,/adj./@精神的;,/adj./@心理的;,/adj./@智力的;,/adj./@內心的;,/adj./@精神病的;
 merely ,/adv./@僅;
 meteor ,/n./@流星;,/n./@大氣現象;
 method ,/n./@方法;
