--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -1070,7 +1070,7 @@ problem ,/n./@麻煩;
 proceed ,/vi./@開始;,/vi./@進行;
 process ,/v./@處理;,/n./@過程;
 procure ,/v./@取得;,/v./@獲得;,/v./@導致;
-prodigy ,/n./@奇蹟;
+prodigy ,/n./@奇蹟;,/n./@奇才;,/n./@奇觀;,/n./@天才;
 produce ,/v./@生產;
 product ,/n./@產品;
 profane ,/adj./@褻瀆的;,/vt./@褻瀆;,/adj./@世俗的;
