--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -341,6 +341,7 @@ desolate ,/adj./@荒蕪的;,/adj./@無人煙的;,/adj./@荒涼的;,/adj./@淒涼
 destrier ,/n./@军马;
 detecter ,/n./@探测器;
 detonate ,/v./@引爆;,/v./使@爆炸;
+detoxify ,/vt./@戒毒;,/vt./@去毒;,/vi./@解毒;
 devotion ,/n./@奉献;
 diabetes ,/n./@糖尿病;,/n./@消渴症;
 diagnose ,/v./@诊断;
@@ -920,7 +921,8 @@ pleasant ,/adj./@令人愉快的;
 pleasure ,/n./@快乐;
 poignant ,/adj./@酸楚的;,/adj./@辛酸的;,/adj./@悲惨的;
 polarity ,/n./@極性;
-polaroid ,/n./@偏光板;,/n./@偏振片;
+polaroid ,/n./@偏光板;,/n./@偏振片;,/n./@偏光片;,/n./@偏光薄膜;
+Polaroid ,/n./@拍立得;,/n./@宝丽来;
 polished ,/adj./@擦亮的;,/adj./@抛光的;,/adj./@優美的;,/adj./@娴熟的;,/adj./@优雅的;,/adj./@精煉的;,/adj./@磨光的;,/adj./@有光澤的;,/adj./@老於世故的;,/adj./@圓滑的;
 politics ,/n./@政治;
 polyglot ,/n./@精通數種語言的人;,/adj./@用數種語言的;
