--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -943,6 +943,7 @@ semblance ,/n./@外貌;,/n./@假裝;
 semicolon ,/n./@分號;
 sensation ,/n./@感觉;,/n./@轰动;,/n./@知觉;,/n./@直觉;
 sensitive ,/adj./@敏感的;
+sentience ,/n./@感覺能力;,/n./@知覺能力;,/n./@情感能力;,/n./@感覺力;,/n./@感情能力;
 sentiment ,/n./@情緒;,/n./@態度;,/n./@祝願;,/n./@祝辭;
 September ,/n./@九月;
 sequencer ,/n./@定序器;,/n./@程序;,/n./@装置;
