--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -341,6 +341,7 @@ desolate
 destrier
 detecter
 detonate
+detoxify
 devotion
 diabetes
 diagnose
@@ -921,6 +922,7 @@ pleasure
 poignant
 polarity
 polaroid
+Polaroid
 polished
 politics
 polyglot
