fix bugs and update db

--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -643,7 +643,7 @@ reputation ,/n./@名誉;
 resentment ,/n./@不滿;,/n./@忿恨;
 resignedly ,/adj./@听从地;
 resilience ,/n./@恢复力;,/n./@弹性;
-resistance ,/n./@阻力;
+resistance ,/n./@阻力;,/n./@抵抗;,/n./@抵抗力;,/n./@抵制;,/n./@電阻;
 resolution ,/n./@分辨率;,/n./@决议;,/n./@决心;,/n./@決定;,/n./@解析;,/n./@解決;,/n./@解析度;
 respectful ,/adj./@怀有敬意的;
 respective ,/adj./@分别的;,/adj./@各自的;
