--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -1118,6 +1118,7 @@ public ,/adj./@公開的;
 pummel ,/v./@擊打;
 punish ,/v./@懲罰;
 purify ,/v./@净化;,/v./@純化;
+purity ,/n./@純淨;,/n./@純潔;,/n./@純粹;,/n./@純正;,/n./@貞潔;,/n./@清潔;,/n./@清白;
 purple ,/adj./@紫色的;,/n./@紫色;
 pursue ,/v./@追求;
 putrid ,/adj./@腐臭的;,/adj./@腐爛的;
@@ -1528,6 +1529,7 @@ tomato ,/n./@番茄;
 tongue ,/n./@舌;,/n./@語言;
 topple ,/v./@推倒;,/v./@顛覆;,/vi./@倒下;
 torpor ,/n./@冷漠;
+torque ,/n./@扭轉力;,/n./@扭矩;,/n./@轉矩;,/n./@力矩;,/n.//redirected./@target="torc";
 toward ,/prep./@向;
 tragic ,/adj./@悲慘的;,/adj./@悲劇的;,/adj./@悲劇性的;,/adj./@不幸的;
 trance ,/n./@怳惚;,/n./@恍惚;,/n./@出神;,/n./@入定;
