--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -1118,6 +1118,7 @@ public
 pummel
 punish
 purify
+purity
 purple
 pursue
 putrid
@@ -1528,6 +1529,7 @@ tomato
 tongue
 topple
 torpor
+torque
 toward
 tragic
 trance
