--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -231,6 +231,7 @@ sophisticate ,/v./@复杂化;
 sporadically ,/adv./@零星地;,/adv./@偶發的;
 stereoscopic ,/adj./@立體的;,/adj./@有立體感的;,/adj./@立體成像的;,/adj./@體視的;
 subscription ,/n./@订阅;
+subsequently ,/adv./@隨後;,/adv./@其後;,/adv./@接著;
 substitution ,/n./@代替;,/n./@置换;
 subterranean ,/adj./@地下的;,/adj./@秘密的;
 superstition ,/n./@迷信;
