--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -21,6 +21,7 @@ acquaint ,/v./使@认识;,/v./使@熟悉;
 activate ,/v./@刺激;,/v./@激活;
 activity ,/n./@活动;
 actually ,/adv./@事实上;
+actuator ,/n./@執行器;
 addendum ,/n./@附錄;,/n./@附件;,/n./@補遺;
 addition ,/n./@添加;
 adequate ,/adj./@足够的;
