--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -105,6 +105,7 @@ autocracy ,/n./@獨裁;
 autograph ,/v./@親筆;
 automatic ,/adj./@自动的;
 autonomic ,/adj./@自治的;,/adj./@自發的;
+autopilot ,/redirected./@target="automatic pilot";
 auxiliary ,/adj./@辅助的;,/n./@辅助者;,/n./@助动词;
 available ,/adj./@可用的;
 avalanche ,/n./@雪崩;,/n./@山崩;,/n./@大批;
