--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -276,6 +276,7 @@ distillery
 distortion
 distribute
 divergence
+drivetrain
 economical
 electronic
 elementary
@@ -571,6 +572,7 @@ playwright
 polychrome
 population
 possession
+powertrain
 precarious
 precaution
 precedence
