--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -276,6 +276,7 @@ distillery ,/n./@蒸餾;
 distortion ,/n./@扭曲;,/n./@失真;,/n./@變形;
 distribute ,/v./@分配;,/v./@分布;
 divergence ,/n./@分歧;
+drivetrain ,/n./@傳動系統;
 economical ,/adj./@节约的;
 electronic ,/adj./@电子的;
 elementary ,/adj./@基礎的;,/adj./@初步的;
@@ -571,6 +572,7 @@ playwright ,/n./@剧作家;
 polychrome ,/n./@多彩;,/adj./@多彩的;,/adj./@多色的;
 population ,/n./@人口;
 possession ,/n./@資產;,/n./@所有;,/n./@擁有;,/n./@佔有;,/n./@領地;
+powertrain ,/n./@動力總成;
 precarious ,/adj./@不穩的;,/adj./@危險的;,/adj./@說不定的;
 precaution ,/n./@預防;,/n./@警惕;,/n./@謹慎;
 precedence ,/n./@領先;
