--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -102,6 +102,7 @@ blacksmith ,/n./@鐵匠;,/n./@鍛工;,/n./@蹄鐵匠;
 bloodstain ,/n./@血跡;
 blundering ,/adj./@浮躁的;
 boisterous ,/adj./@喧鬧的;,/adj./@狂暴的;,/adj./@猛烈的;
+bootloader ,/n./@引導程序;,/n./@引導加載程序;
 borderline ,/n./@邊界綫;,/n./@邊界;,/n./@界綫;
 bottomless ,/adj./@無底的;
 bridegroom ,/n./@新郎;
@@ -290,10 +291,12 @@ engrossing ,/adj./@吸引人的;
 enterprise ,/n./@企业;
 enthusiasm ,/n./@热情;
 enticement ,/n./@诱惑;,/n./@怂恿;,/n./@诱饵;
+entomology ,/n./@昆蟲學;
 entrancing ,/adj./@吸引人的;
 epexegesis ,/n./@附加說明;
 equivalent ,/adj./@等价的;
 equivocate ,/v./@模棱兩可;,/v./@支吾其詞;,/v./@含糊其辭;
+ergonomics ,/n./@人體工學;,/n./@工效學;,/n./@人類工程學;
 escalation ,/n./@增强;,/n./@加剧;,/n./@扩大;,/n./@恶化;,/n./@逐步上升;,/n./@逐步擴大;
 especially ,/adv./@尤其;
 evaluation ,/n./@评价;,/n./@评估;
