--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -74,6 +74,7 @@ correctional ,/adj./@改造的;,/adj./@改正的;,/adj./@劳改的;
 cosmopolitan ,/adj./@全球的;,/adj./@国际的;,/n./@大都市;
 covetousness ,/n./@貪婪;,/n./@貪心;,/n./@妄羡;
 degeneration ,/n./@退化;
+degenerative ,/adj./@退化的;,/adj./@退化性的;,/adj./@變性的;,/adj./@變質的;,/adj./@衰退的;,/adj./@墮落的;,/adj./@變態的;
 deliberately ,/adv./@故意的;,/adv./@慎重地;
 deliberation ,/n./@慎重;,/n./@故意;
 demographics ,/n./@人口统计资料;
