--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -610,6 +610,7 @@ mass ,/adj./@大量的;
 mast ,/n./@桅杆;,/n./@柱;
 mate ,/n./@夥伴;,/n./@夥計;
 math ,/n./@數學;
+matt ,/redirected./@target="matte";
 maul ,/n./@大木槌;,/n./@大木錘;,/vt./@撕咬;
 maze ,/n./@迷宮;
 meal ,/n./@餐;
@@ -796,6 +797,7 @@ prop ,/v./@支撑;,/n./@支柱;
 puke ,/v./@嘔吐;
 pull ,/v./@拉;
 punk ,/n./@朋克;,/n./@痞子;
+pupa ,/n./@蛹;
 pure ,/adj./@纯净的;,/adj./@纯洁的;
 push ,/v./@推;
 quay ,/n./@碼頭;
