--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -527,6 +527,7 @@ genre ,/n./@類型;,/n./@流派;,/n./@体裁;
 genus ,/n./@屬;,/n./@種類;
 ghost ,/n./@鬼;,/n./@幽靈;
 giant ,/adj./@巨大的;,/n./@巨人;
+gland ,/n./@腺;
 glare ,/v./@瞪;
 glass ,/n./@玻璃;,/n./@鏡子;
 gleam ,/n./@微光;,/n./@閃光;,/v./@閃耀;
@@ -720,6 +721,7 @@ lunar ,/adj./@月亮的;,/adj./@陰歷的;
 lunch ,/n./@午餐;
 lunge ,/v./@刺;,/v./@躍進;
 lycee ,/n./@國立高等學校;
+lymph ,/n./@淋巴;,/n./@淋巴液;
 lynch ,/n./@私刑;,/v./@私刑處死;
 lyric ,/n./@歌詞;,/n./@抒情詩;
 madam ,/n./@夫人;,/n./@太太;,/n./@女士;
@@ -732,6 +734,7 @@ march ,/v./@行進;,/n./@行軍;,/n./@進軍;,/vi./@行軍;,/vi./@進軍;
 March ,/n./@三月;
 match ,/v./@競賽;,/v./@相配;,/n./@火柴;,/v./@敵得過;,/n./@對手;
 maths ,/n./@數學;
+matte ,/adj./@亞光的;,/adj./@暗淡的;,/adj./@無光澤的;
 maxim ,/n./@格言;,/n./@準則;,/n./@座右銘;
 maybe ,/adv./@也許;
 means ,/n./@方法;,/n./@手段;,/v./@意味著;
@@ -838,6 +841,7 @@ ozone ,/n./@臭氧;
 padre ,/n./@神父;
 paean ,/n./@歡樂頌;
 pagan ,/adj./@異教的;,/n./@異教徒;
+pager ,/n./@傳呼機;,/n./@傳呼器;,/n./@尋呼機;,/n./@呼機;
 paint ,/v./@繪畫;
 panel ,/n./@嵌板;,/n./@儀表盤;
 panic ,/n./@恐慌;
@@ -1013,7 +1017,7 @@ samen ,/n./@精液;
 sauce ,/n./@沙司;,/n./@醬油;,/n./@调味汁;
 savor ,/n./@滋味;,/n./@氣味;,/n./@食欲;,/v./@品嘗;
 savvy ,/n./@常识;,/n./@悟性;,/adj./@精明的;,/vt./@懂;,/vt./@知曉;
-scale ,/n./@魚鱗;,/n./@規模;
+scale ,/n./@魚鱗;,/n./@規模;,/n./@刻度;,/n./@比例;,/n./@等級;,/n./@秤;,/n./@天平;,/n./@秤盤;
 scalp ,/n./@頭皮;,/n./@帶髮頭皮;,/n./@戰利品;,/vt./@轉手倒賣;,/vt./@剝下頭皮;,/vt./@严惩;
 scape ,/n./@花莖;,/n./@觸角根;,/n./@羽軸;,/n./@柱身;
 scare ,/v./@驚嚇;
@@ -1408,6 +1412,7 @@ wince ,/v./@畏縮;
 witch ,/n./@女巫;
 woman ,/n./@女人;
 women ,/n./@女人;
+wonky ,/adj./@搖晃的;,/adj./@搖搖欲墜的;,/adj./@靠不住的;,/adj./@有毛病的;,/adj./@歪斜的;,/adj./@颤巍巍的;
 woozy ,/adj./@虛弱的;,/adj./@微醉的;
 world ,/n./@世界;
 worry ,/v./@擔心;
