--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -256,7 +256,7 @@ castle ,/n./@城堡;
 casual ,/adj./@隨便的;,/adj./@偶然的;,/adj./@随意的;,/adj./@粗略的;,/adj./@漫不经心的;,/adj./@轻松的;,/n./@临时工;,/adj./@临时的;
 cattle ,/n./@牛;
 causal ,/adj./@原因的;,/adj./@表示原因的;,/adj./@因果的;
-caveat ,/n./@警告;,/n./@告誡;
+caveat ,/n./@警告;,/n./@告誡;,/n./@限制條款;
 cavern ,/n./@洞穴;,/v./@挖空;
 caviar ,/n./@魚子醬;
 cavity ,/n./@洞穴;,/n./@腔;,/n./@龋洞;,/n./@孔;
@@ -476,6 +476,7 @@ duster ,/n./@抹布;,/n./@防塵外衣;
 dynamo ,/n./@发电机;
 easier ,/adj./@更容易;
 easily ,/adv./@容易地;
+eclose ,/vi./@羽化;,/vi./@孵化;
 editor ,/n./@編輯;,/n./@編者;
 efface ,/v./@擦掉;,/v./@抹去;
 effect ,/n./@影響;,/n./@效果;,/n./@作用;
