--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -578,6 +578,7 @@ figment ,/n./@臆造的事物;
 filling ,/n./@填充;,/n./@餡料;
 finally ,/adv./@最終;
 finance ,/n./@經濟;
+finicky ,/adj./@過分講究的;,/adj./@煩瑣的;,/adj./@愛挑剔的;
 firearm ,/n./@槍支;
 firefly ,/n./@螢火蟲;
 flatten ,/v./@變平;
@@ -816,6 +817,7 @@ loyalty ,/n./@忠誠;
 lucency ,/n./@透明;,/n./@光亮;
 lumiere ,/n./@盧米埃爾;
 lunatic ,/adj./@瘋狂的;
+macaque ,/n./@獼猴;
 machine ,/n./@機械;
 madness ,/n./@疯狂;,/n./@愚蠢;,/n./@精神失常;,/n./@瘋狂的行為;,/n./@瘋狂之舉;
 magenta ,/adj./@洋紅;,/n./@洋紅色;
@@ -960,8 +962,10 @@ papyrus ,/n./@紙莎草;,/n./@紙莎草紙;,/n./@古代文獻;
 parable ,/n./@寓言;,/n./@比喻;
 paradox ,/n./@悖論;,/n./@矛盾;
 paragon ,/n./@模範;,/adj./@完美的;,/n./@完美之物;
+parcour ,/redirected./@target="parkour";
 parents ,/n./@父母;
 parking ,/n./@停車;
+parkour ,/n./@跑酷;
 parlour ,/n./@客廳;,/n./@會客室;
 parsley ,/n./@歐芹;
 partake ,/v./@分擔;,/v./@分享;,/v./@參與;,/v./@吃;
