--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -38,6 +38,7 @@ affluent ,/adj./@富裕的;,/adj./@丰富的;
 aggrieve ,/v./@使苦惱;
 agitator ,/n./@鼓动者;,/n./@搅拌器;
 agrarian ,/adj./@土地的;,/adj./@耕地的;,/adj./@农业的;,/adj./@农村的;
+airborne ,/adj./@空運的;,/adj./@空氣傳播的;,/adj./@空降的;,/adj./@飛行中的;,/adj./@在空中的;
 aircraft ,/n./@飛行器;,/n./@航空器;
 airdrome ,/n./@飛機場;
 airstrip ,/n./@飛機跑道;
@@ -410,6 +411,7 @@ dyslexia ,/n./@诵读困难;
 dyslexic ,/adj./@诵读困难的;
 dystopia ,/n./@糟糕的社會;,/n./@地獄般的處境;,/n./@反烏托邦;
 eclectic ,/adj./@兼收并蓄的;,/adj./@不拘一格的;,/adj./@相容並蓄的;,/adj./@博採眾長的;
+eclosion ,/n./@羽化;,/n./@孵化;
 economic ,/adj./@经济学的;
 effluvia ,/n./@氣味;
 effusive ,/adj./@流出的;,/adj./@熱情洋溢的;
@@ -669,6 +671,7 @@ intimate ,/adj./@亲密的;
 intruder ,/n./@侵入者;
 inundate ,/v./@淹沒;,/v./@汎濫;,/v./@浸水;
 invasion ,/n./@入侵;
+invasive ,/adj./@侵略性的;,/adj./@侵入的;,/adj./@开刀的;,/adj./@侵擾的;,/adj./@侵入性的;
 investor ,/n./@投资者;
 irrigate ,/v./@灌溉;
 irritate ,/v./@惹怒;
