--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -134,6 +134,7 @@ bimonthly ,/n./@双月刊;
 binocular ,/adj./@雙眼的;,/adj./@雙目的;,/adj./@雙眼用的;,/adj./@雙目鏡;,/adj./@雙筒望遠鏡;,/adj./@雙目顯微鏡;
 biography ,/n./@传记;
 biometric ,/adj./@生物特徵識別的;,/adj./@生物統計的;,/adj./@生物測定的;
+biosphere ,/n./@生物圈;
 blacklist ,/n./@黑名單;
 blueprint ,/n./@藍圖;
 bluetooth ,/n./@蓝牙;
@@ -383,7 +384,7 @@ emanation ,/n./@散发;,/n./@喷发;,/n./@表現;,/n./@顯示;
 embarrass ,/v./使@尴尬;
 embellish ,/vt./@美化;,/vt./@裝飾;,/vt./@潤色;
 embroider ,/v./@刺綉;,/v./@裝飾;,/v./@鑲邊;,/vi./@綉花;
-emergence ,/n./@出现;
+emergence ,/n./@出现;,/n./@現身;,/n./@顯露;,/n./@嶄露頭角;,/n./@形成;,/n./@浮現;,/n./@脫繭;,/n./@羽化;
 emergency ,/n./@紧急情况;
 emphasize ,/v./@強調;,/v./@著重;
 empirical ,/adj./@經驗的;,/adj./@實證的;
@@ -407,6 +408,7 @@ ephemeral ,/adj./@短暫的;,/adj./@朝生暮死的;
 epidermis ,/n./@表皮;,/n./@外皮;
 equipment ,/n./@裝備;,/n./@設備;,/n./@器材;,/n./@裝置;
 eradicate ,/v./@根除;
+ergonomic ,/adj./@人體工學的;,/adj./@工效學的;,/adj./@人類工程學的;
 erroneous ,/adj./@错误的;
 escalator ,/n./@電動扶梯;
 esoterica ,/n./@秘传的事物;,/n./@黄色书刊;
@@ -516,7 +518,7 @@ heterodox ,/adj./@異端的;
 hibernate ,/vi./@冬眠;
 highlight ,/n./@高亮;,/n./@强调;
 hilarious ,/adj./@歡鬧的;,/adj./@滑稽的;
-hindrance ,/n./@障礙;,/n./@妨礙;,/n./@妨害;
+hindrance ,/n./@障礙;,/n./@妨礙;,/n./@妨害;,/n./@障礙物;,/n./@阻礙物;
 hindsight ,/n./@事後聰明;,/n./@事後的認識;,/n./@後見之明;
 histogram ,/n./@直方图;,/n./@柱形图;
 homefront ,/n./@國土防線;
@@ -854,6 +856,7 @@ pulverize ,/vt./@弄碎;,/vt./@击败;,/vt./@粉碎;,/vt./@摧毀;
 punctuate ,/v./@加標點;,/v./@不時打斷;
 pupillary ,/adj./@瞳孔的;,/adj./@学生的;,/adj./@被监护人的;
 purgatory ,/n./@炼狱;,/n./@折磨;
+quadruped ,/n./@四足動物;,/n./@四足獸;
 quadruple ,/adj./@四倍的;,/adj./@四重的;
 qualified ,/adj./@有资格的;
 quarterly ,/n./@季刊;
