--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -102,6 +102,7 @@ blacksmith
 bloodstain
 blundering
 boisterous
+bootloader
 borderline
 bottomless
 bridegroom
@@ -290,10 +291,12 @@ engrossing
 enterprise
 enthusiasm
 enticement
+entomology
 entrancing
 epexegesis
 equivalent
 equivocate
+ergonomics
 escalation
 especially
 evaluation
