--- a/Files/lang/en/english5.csv
+++ b/Files/lang/en/english5.csv
@@ -527,6 +527,7 @@ genre
 genus
 ghost
 giant
+gland
 glare
 glass
 gleam
@@ -720,6 +721,7 @@ lunar
 lunch
 lunge
 lycee
+lymph
 lynch
 lyric
 madam
@@ -732,6 +734,7 @@ march
 March
 match
 maths
+matte
 maxim
 maybe
 means
@@ -838,6 +841,7 @@ ozone
 padre
 paean
 pagan
+pager
 paint
 panel
 panic
@@ -1408,6 +1412,7 @@ wince
 witch
 woman
 women
+wonky
 woozy
 world
 worry
