--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -578,6 +578,7 @@ figment
 filling
 finally
 finance
+finicky
 firearm
 firefly
 flatten
@@ -816,6 +817,7 @@ loyalty
 lucency
 lumiere
 lunatic
+macaque
 machine
 madness
 magenta
@@ -960,8 +962,10 @@ papyrus
 parable
 paradox
 paragon
+parcour
 parents
 parking
+parkour
 parlour
 parsley
 partake
