--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -38,6 +38,7 @@ affluent
 aggrieve
 agitator
 agrarian
+airborne
 aircraft
 airdrome
 airstrip
@@ -410,6 +411,7 @@ dyslexia
 dyslexic
 dystopia
 eclectic
+eclosion
 economic
 effluvia
 effusive
@@ -669,6 +671,7 @@ intimate
 intruder
 inundate
 invasion
+invasive
 investor
 irrigate
 irritate
