--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -134,6 +134,7 @@ bimonthly
 binocular
 biography
 biometric
+biosphere
 blacklist
 blueprint
 bluetooth
@@ -407,6 +408,7 @@ ephemeral
 epidermis
 equipment
 eradicate
+ergonomic
 erroneous
 escalator
 esoterica
@@ -854,6 +856,7 @@ pulverize
 punctuate
 pupillary
 purgatory
+quadruped
 quadruple
 qualified
 quarterly
