--- a/Files/lang/phrases/2 word phrase.csv
+++ b/Files/lang/phrases/2 word phrase.csv
@@ -164,3 +164,4 @@
 ,work,reel,/redirected./@target="showreel";
 ,power,train,/redirected./@target="powertrain";
 ,automatic,pilot,自動駕駛儀,自動駕駛系統,自動駕駛;
+,sink,in,滲入,被理解,被理會,被领会;
