--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -148,7 +148,7 @@ intermediary ,/n./@调解人;
 intermediate ,/adj./@中间的;
 intermission ,/n./@幕間休息;,/n./@暫停;,/n./@中斷;
 interpretive ,/redirected./@target="interpretative";
-intersection ,/n./@交集;,/n./@交点;,/n./@十字路口;,/n./@相交;
+intersection ,/n./@交集;,/n./@交点;,/n./@十字路口;,/n./@相交;,/n./@交叉;,/n./@交叉點;,/n./@道路交叉口;
 interstellar ,/adj./@星際的;
 intervention ,/n./@介入;,/n./@調停;,/n./@干涉;
 intimidation ,/n./@恐吓;,/n./@威胁;
@@ -252,6 +252,7 @@ unacceptable ,/adj./@不能接受的;
 unauthorized ,/adj./@非法的;,/adj./@未被授权的;
 unbelievable ,/adj./@难以置信的;
 unemployment ,/n./@失业;
+unfathomable ,/adj./@無法理解的;,/adj./@難以理解的;,/adj./@無法測量的;,/adj./@難以測量的;,/adj./@深不可測的;,/adj./@廣不可測的;
 unidentified ,/adj./@未識別的;,/adj./@不明的;,/adj./@未知的;
 unquenchable ,/adj./@无法熄灭的;
 unscrupulous ,/adj./@肆無忌憚的;
