--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -1040,6 +1040,7 @@ scram ,/vi./@走開;,/vi./@滚开;
 scrap ,/n./@碎片;,/n./@廢棄物;,/n./@片段;
 scrub ,/v./@擦洗;,/n./@矮樹;
 scull ,/n./@短槳;,/n./@賽艇;,/v./@搖槳;,/v./@划船;
+sedan ,/n./@轎子;,/n./@小轎車;
 segue ,/n./@繼續;
 seize ,/v./@抓住;,/v./@奪取;
 semen ,/n./@精液;
