--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -365,7 +365,7 @@ crouch ,/v./@蹲;,/v./@蜷伏;
 cruise ,/n./@巡航;,/vi./@巡航;,/vt./@巡航於;,/vi./@漫遊;,/vt./@航遊於;
 crunch ,/v./@咬碎;,/v./@壓碎;
 crutch ,/n./@拐杖;,/n./@腋杖;,/n./@支撑物;
-cuboid ,/n./@立方體;
+cuboid ,/n./@立方體;,/n./@長方體;,/adj./@立方體的;,/adj./@立方形的;
 cuddle ,/v./@擁抱;
 curate ,/v./@摘選;
 curtly ,/adv./@簡略地;
@@ -1062,6 +1062,7 @@ phrase ,/n./@短語;
 phylum ,/n./@門;,/n./@語係;
 piazza ,/n./@廣場;
 pickle ,/n./@泡菜;
+pickup ,/n./@輕型貨車;,/n./@接人;,/n./@提貨;,/n./@偶然結識;,/n./@偶然結識的人;,/n./@好轉;
 pierce ,/v./@刺穿;,/v./@透入;
 pigeon ,/n./@鴿子;
 pilfer ,/v./@偷竊;
@@ -1264,6 +1265,7 @@ salary ,/n./@薪水;,/vt./@加薪;
 saline ,/adj./@鹽的;,/adj./@含鹽的;,/n./@鹽水;
 saliva ,/n./@唾液;
 sallow ,/adj./@灰黃的;
+saloon ,/n./@小轎車;,/n./@酒吧;,/n./@酒館;,/n./@包房;,/n./@雅座;,/n./@交誼廳;,/n./@活動室;,/n./@大廳;,/n./@客廳;
 sample ,/n./@樣品;
 sandal ,/n./@凉鞋;
 satire ,/n./@諷刺;,/n./@譏諷;
