--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -1100,6 +1100,7 @@ provoke ,/v./@激怒;,/v./@驅使;,/v./@煽動;
 prudent ,/adj./@謹慎的;
 psychic ,/adj./@心靈的;,/adj./@精神的;,/adj./@超自然的;,/adj./@通靈的;
 puberty ,/n./@青春期;,/n./@發育期;
+pulsate ,/vi./@搏動;,/vi./@悸動;,/vi./@脈動;,/vi./@震颤;
 pungent ,/adj./@辛辣的;,/adj./@刺激性的;,/adj./@苦痛的;,/adj./@尖刻的;
 purloin ,/v./@偷竊;
 purport ,/v./@聲稱;,/v./@意圖;,/n./@意圖;,/n./@意義;
