--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -170,6 +170,7 @@ carefully ,/adv./@小心地;
 carpenter ,/n./@木匠;
 carpentry ,/n./@木匠活;
 cartilage ,/n./@軟骨;
+cartridge ,/n./@替芯;,/n./@替囊;,/n./@替盒;,/n./@替筒;,/n./@替匣;,/n./@彈藥筒;,/n./@彈殼;,/n./@彈膛;,/n./@子彈;,/n.//redirected./@target="ink cartridge";,/n.//redirected./@target="pen cartridge";,/n.//redirected./@target="magnetic tape cartridge";
 cascading ,/n./@級聯;,/n./@串接;,/n./@階式滲透;
 catalogue ,/n./@目錄;
 Catalonia ,/n./@加泰羅尼亞;
@@ -375,6 +376,7 @@ effective ,/adj./@有效的;
 efficient ,/adj./@效率高的;
 ejaculate ,/v./@射精;
 elaborate ,/v./@闡述;,/adj./@詳盡的;,/adj./@精心制作的;,/adj./@精密的;,/adj./@精细的;,/adj./@複雜的;
+electrode ,/n./@電極;
 elemental ,/adj./@自然力的;,/adj./@基本的;,/adj./@原始的;,/adj./@強大的;,/adj./@元素的;
 elevation ,/n./@海拔;,/n./@提高;,/n./@崇高;
 eliminate ,/v./@消除;,/v./@排除;
@@ -688,7 +690,7 @@ microwave ,/n./@微波;
 migratory ,/adj./@遷徙的;,/adj./@遷移的;,/adj./@遷居的;,/adj./@洄游的;,/adj./@遊走性的;
 millennia ,/redirected./@target="millennium";
 millipede ,/n./@千足虫;,/n./@马陆;
-miniature ,/n./@微缩模型;,/adj./@小型的;
+miniature ,/n./@微缩模型;,/adj./@小型的;,/adj./@微型的;,/n./@小型物;
 miserable ,/adj./@痛苦的;
 molecular ,/adj./@分子的;
 momentous ,/adj./@重要的;
