--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -1062,6 +1062,7 @@ phrase
 phylum
 piazza
 pickle
+pickup
 pierce
 pigeon
 pilfer
@@ -1264,6 +1265,7 @@ salary
 saline
 saliva
 sallow
+saloon
 sample
 sandal
 satire
