--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -170,6 +170,7 @@ carefully
 carpenter
 carpentry
 cartilage
+cartridge
 cascading
 catalogue
 Catalonia
@@ -375,6 +376,7 @@ effective
 efficient
 ejaculate
 elaborate
+electrode
 elemental
 elevation
 eliminate
