--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -170,7 +170,7 @@ carefully ,/adv./@小心地;
 carpenter ,/n./@木匠;
 carpentry ,/n./@木匠活;
 cartilage ,/n./@軟骨;
-cartridge ,/n./@替芯;,/n./@替囊;,/n./@替盒;,/n./@替筒;,/n./@替匣;,/n./@彈藥筒;,/n./@彈殼;,/n./@彈膛;,/n./@子彈;,/n.//redirected./@target="ink cartridge";,/n.//redirected./@target="pen cartridge";,/n.//redirected./@target="magnetic tape cartridge";
+cartridge ,/n./@替芯;,/n./@替囊;,/n./@替盒;,/n./@替筒;,/n./@替匣;,/n./@彈藥筒;,/n./@彈殼;,/n./@彈膛;,/n./@子彈;,/n.//redirected./@target="ink cartridge";,/n.//redirected./@target="pen cartridge";,/n.//redirected./@target="magnetic tape cartridge";,/n.//redirected./@target="disk cartridge";,/n.//redirected./@target="record player cartridge";
 cascading ,/n./@級聯;,/n./@串接;,/n./@階式滲透;
 catalogue ,/n./@目錄;
 Catalonia ,/n./@加泰羅尼亞;
