--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -361,6 +361,7 @@ punctuation ,/n./@標點;,/n./@標點符號;
 qualitative ,/adj./@實質性的;,/adj./@質的;,/adj./@定性的;
 radiculitis ,/n./@脊神经根炎;,/n./@神经根炎;
 radioactive ,/adj./@放射性的;
+reactionary ,/adj./@反動的;,/adj./@反動派的;,/n./@反動派;,/n./@反動分子;
 realization ,/n./@实现;
 recalibrate ,/v./@重新校準;
 recognition ,/n./@认出;,/n./@承认;
