--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -627,6 +627,7 @@ recuperate ,/vt./@恢復;,/vt./@挽回;
 recurrence ,/n./@復發;
 redemption ,/n./@贖回;,/n./@償還;,/n./@救贖;,/n./@贖救;,/n./@履行;,/n./@兌現;,/n./@贖罪;,/n./@挽救;
 referendum ,/n./@公投;,/n./@全民投票;
+refinement ,/n./@精煉;,/n./@提煉;,/n./@提純;,/n./@優雅;,/n./@高雅;,/n./@教養;,/n./@精細的改進;,/n./@精細;,/n./@精確;,/n./@微调;,/n./@雕琢;,/n./@細微的差別;,/n./@細微的區別;
 reflection ,/n./@反应;,/n./@反射;
 reflective ,/adj./@反射的;,/adj./@反照的;,/adj./@反映的;,/adj./@思辨的;,/adj./@沉思的;
 refraction ,/n./@折射;
