--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -1176,7 +1176,7 @@ rectum ,/n./@直腸;
 redact ,/vt./@編輯;,/vt./@校訂;,/vt./@編寫;,/vt./@刪減;,/vt./@修訂;
 redeem ,/vt./@兌換;,/v./@贖回;,/v./@挽回;,/v./@履行;,/v./@補償;,/v./@恢復;
 reduce ,/v./@減少;
-refine ,/v./@完善;
+refine ,/v./@完善;,/vt./@提煉;,/vt./@精鍊;
 reflow ,/v./@流回;,/v./@再漲;
 reform ,/v./@改革;
 refuge ,/n./@庇護所;
