--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -703,6 +703,7 @@ mythology ,/n./@神話;,/n./@神話學;,/n./@神話集;
 necessary ,/adj./@必要的;
 nefarious ,/adj./@邪惡的;,/adj./@惡毒的;
 negotiate ,/v./@协商;
+neurology ,/n./@神經學;,/n./@神經病學;
 newsstand ,/n./@報攤;,/n./@雜誌攤;
 nightmare ,/n./@梦魇;,/n./@噩夢;,/n./@惡夢;
 normalize ,/v./@正常化;
