--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -790,7 +790,7 @@ musty ,/adj./@發霉的;,/adj./@落伍的;,/adj./@冷淡的;
 mutex ,/n./@互斥;,/n./@互斥體;
 naive ,/adj./@天真的;,/adj./@幼稚的;
 nasal ,/adj./@鼻的;,/adj./@鼻音的;
-nasty ,/adj./@肮脏的;,/adj./@下流的;
+nasty ,/adj./@肮脏的;,/adj./@下流的;,/adj./@令人作嘔的;,/adj./@令人難受的;,/adj./@惡劣的;,/adj./@惡意的;,/adj./@嚴重的;,/adj./@討厭的;,/adj./@齷齪的;
 natal ,/adj./@出生的;
 naval ,/adj./@海军的;
 navel ,/n./@脐;,/n./@中心;
