--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -760,6 +760,7 @@ iterate ,/v./@叠代;
 January ,/n./@一月;
 jasmine ,/n./@茉莉;,/n./@淡黃色;
 javelin ,/n./@标枪;,/n./@投枪;
+jaywalk ,/vi./@亂過馬路;,/vi./@亂穿馬路;,/vi./@不守交通規則橫穿馬路;
 jealous ,/adj./@嫉妒的;
 jeopard ,/v./@危及;
 jewelry ,/n./@珠寶;
