--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -778,6 +778,7 @@ moderate ,/adj./@温和的;,/adj./@适度的;
 molecule ,/n./@分子;
 momentum ,/n./@勢頭;,/n./@動量;,/n./@动力;
 monarchy ,/n./@君主制;
+monolith ,/n./@巨型獨石;,/n./@獨塊巨石;,/n./@巨大建築;,/n./@權力龐大的巨型機構;,/n./@單一羣體;,/n./@龐然大物;
 monopoly ,/n./@垄断;
 monument ,/n./@纪念碑;
 morality ,/n./@道德品质;
