--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -380,7 +380,7 @@ dispense ,/v./@分配;,/v./@免除;,/v./@豁免;
 disperse ,/v./@分散;,/v./@散開;,/vt./@驅散;,/vt./@解散;,/vt./@疏散;,/vt./@散播;,/vi./@消散;
 disposal ,/n./@处理;,/n./@清理;
 disprove ,/v./@反驳;
-dissolve ,/v./@溶解;
+dissolve ,/v./@溶解;,/vt./@解散;,/vt./@解除;,/vt./@終止;,/vi./@消失;
 distance ,/n./@距离;
 distaste ,/v./@厭惡;
 distinct ,/adj./@差别明显的;,/adj./@有區別的;,/adj./@明顯的;,/adj./@清楚的;
