--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -608,7 +608,7 @@ intersect ,/v./@相交;,/v./@交叉;,/v./@横断;
 intervene ,/v./@介入;,/v./@干涉;,/v./@調停;
 interview ,/v./@面试;,/v./@采访;
 intestine ,/n./@肠;
-intricate ,/adj./@复杂的;
+intricate ,/adj./@复杂的;,/adj./@錯綜複雜的;,/adj./@複雜精細的;
 intrinsic ,/adj./@本质的;,/adj./@固有的;,/adj./@本身的;,/adj./@內在的;
 introduce ,/v./@介紹;,/v./@引進;,/v./@采用;
 intuition ,/n./@直觉;
@@ -998,7 +998,7 @@ stressful ,/adj./@紧张的;
 structure ,/n./@结构;,/n./@组织;
 subatomic ,/adj./@亚原子的;
 subdivide ,/v./@再分;
-subjugate ,/vt./@征服;,/v./@剋制;,/vt./@制服;
+subjugate ,/vt./@征服;,/vt./@克制;,/vt./@制服;,/vt./@抑制;
 submarine ,/n./@潜艇;
 subscribe ,/v./@订阅;,/v./@赞成;,/v./@签署;,/v./@捐助;
 subscript ,/adj./@下標的;,/n./@下標;
@@ -1048,7 +1048,7 @@ torturous ,/adj./@折磨人的;
 tracksuit ,/n./@寬鬆衣褲;,/n./@運動服;,/n./@休閒衣褲;
 trademark ,/n./@商標;
 tradition ,/n./@传统;,/n./@惯例;
-transcend ,/v./@超越;,/v./@戰勝;
+transcend ,/v./@超越;,/v./@戰勝;,/vt./@勝過;,/vt./@優於;
 transform ,/v./@转换;,/v./@改观;
 transient ,/adj./@短暫的;,/adj./@暂住的;
 translate ,/v./@翻譯;
