--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -111,6 +111,7 @@ bush ,/n./@灌木叢;
 bust ,/n./@破產;
 busy ,/adj./@忙碌的;
 butt ,/n./@根端;,/v./@頂撞;,/n./@對象;,/n./@靶子;,/n./@槍托;,/n./@菸蒂;,/n./@屁股;,/n./@笑柄;
+buzz ,/n./@嗡嗡聲;,/n./@噪音;,/n./@唧唧喳喳;,/n./@流言;,/n./@謠言;,/n./@話題;,/n./@愉悅;,/n./@陶醉;
 cafe ,/n./@咖啡館;
 cake ,/n./@蛋糕;
 calf ,/n./@牛犊;,/n./@幼兽;,/n./@小牛皮;,/n./@腿肚子;,/n./@腓;,/n./@浮冰;
